# cfeconfig

./: README.md  pyproject.toml
cfeconfig/: config.py
