[tool.poetry]
name = "cfeconfig"
version = "0.3.0"
description = "Manage app configuration with CLI options, Config File, or Env."
authors = ["Matt Chapman <Matt@NinjitsuWeb.com>"]
homepage = "https://github.com/matt2000/cfeconfig"
repository = "https://github.com/matt2000/cfeconfig"

license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
